Fix z-index in slider sections

--- a/src/scss/components/history.scss
+++ b/src/scss/components/history.scss
@@ -7,6 +7,7 @@
     z-index: 2;
     padding: 0 40px;
     margin-bottom: 456px;
+    pointer-events: none;
     padding-top: 571px;
     background: url("../img/history_bg.png") top center / 100% 100% no-repeat,
         url("../img/seamen_memorial.png") top right / 398px 626px no-repeat;
